hphp/hack/test/typecheck/lsb_disallow_override_public.php.exp
File "lsb_disallow_override_public.php", line 7, characters 7-7:
Class B does not correctly implement all required members  (Typing[4284])
File "lsb_disallow_override_public.php", line 7, characters 17-17:
Some members are incompatible with those declared in type A
Read the following to see why:
File "lsb_disallow_override_public.php", line 8, characters 17-19:
Member $x may not override __LSB member of parent
File "lsb_disallow_override_public.php", line 4, characters 27-29:
This is being overridden
